# pytest-audioeval

./: 404.html  LICENSE  Makefile  README.md  compose.integration.yml  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
changelog/: index.html
docs/: changelog.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: advanced-usage.md  configuration.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/advanced-usage/: index.html
guides/configuration/: index.html
reference/SUMMARY/: index.html
reference/pytest_audioeval/client/: index.html
reference/pytest_audioeval/metrics/audio/: index.html
reference/pytest_audioeval/metrics/text/: index.html
reference/pytest_audioeval/plugin/: index.html
reference/pytest_audioeval/samples/registry/: index.html
reference/pytest_audioeval/stt/: index.html
reference/pytest_audioeval/tts/: index.html
scripts/: generate_samples.py
search/: search_index.json
src/pytest_audioeval/: client.py  plugin.py  stt.py  tts.py
src/pytest_audioeval/metrics/: audio.py  text.py
src/pytest_audioeval/samples/: registry.py
src/pytest_audioeval/samples/audio/es/: conteo.txt
src/pytest_audioeval/samples/audio/fr/: bonjour_monde.txt  comptage.txt
src/pytest_audioeval/samples/audio/hi/: ginti.txt  namaste_duniya.txt  pangrama.txt
src/pytest_audioeval/samples/audio/it/: ciao_mondo.txt  conteggio.txt  pangrama.txt
src/pytest_audioeval/samples/audio/ja/: kazoeru.txt  pangrama.txt
src/pytest_audioeval/samples/audio/pl/: liczenie.txt  pangrama.txt  witaj_swiecie.txt
src/pytest_audioeval/samples/audio/pt/: contagem.txt  pangrama.txt
src/pytest_audioeval/samples/audio/zh/: nihao_shijie.txt  pangrama.txt
tests/: conftest.py
tests/integration/: conftest.py  test_plugin_usage.py  test_roundtrip.py  test_stt.py  test_tts.py
tests/unit/pytest_audioeval/: test_client.py  test_plugin.py  test_stt.py  test_tts.py
tests/unit/pytest_audioeval/metrics/: test_audio.py  test_text.py
tests/unit/pytest_audioeval/samples/: test_registry.py
