[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-audioeval"
version = "0.1.2"
description = "Pytest plugin for STT/TTS integration testing with httpx, metrics, and embedded audio samples."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "damvolkov", email = "damvolkovv@gmail.com" }]
keywords = ["pytest", "audio", "evaluation", "stt", "tts", "speech", "testing", "metrics", "wer", "pesq"]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Typing :: Typed",
]
dependencies = [
    "pytest>=8.0",
    "jiwer>=3.0",
    "numpy>=2.0",
    "httpx>=0.27",
    "soundfile>=0.12",
    "pesq>=0.0.4",
    "httpx-ws>=0.8.2",
    "httpx-sse>=0.4.3",
]

[project.urls]
Homepage = "https://damvolkov.github.io/pytest-audioeval"
Documentation = "https://damvolkov.github.io/pytest-audioeval"
Repository = "https://github.com/damvolkov/pytest-audioeval"
Changelog = "https://damvolkov.github.io/pytest-audioeval/changelog/"

[project.entry-points."pytest11"]
audioeval = "pytest_audioeval.plugin"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.5",
    "pytest-cov>=6.0",
    "pytest-rerunfailures>=14.0",
    "ruff>=0.9",
    "orjson>=3.10",
    "pytest-audioeval",
]
docs = [
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.5",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=1.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_audioeval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["src/pytest_audioeval"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\b",
    "@overload",
    "raise NotImplementedError",
    "pragma: no cover",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.uv.sources]
pytest-audioeval = { workspace = true }
